--- a/app/blog_article.html
+++ b/app/blog_article.html
@@ -111,28 +111,44 @@
     <div class="row">
       <div class="col-sm-9">
         <div class="box-common">
-          <div class="article">
+          <article class="article article-single">
             <!--<div class="media-left">
               <a href="#">
                 <img class="media-object" width="200" src="http://static.bootcss.com/www/assets/img/codeguide.png" alt="">
               </a>
             </div>-->
             <div class="page-header">
-              <h3 class="text-center">概念抽象、接口和类</h3>
+              <h1 class="text-center">概念抽象、接口和类</h1>
               <div class="article-author text-center"><span>来源：原创</span> 作者：Tony 发表时间：2014年12月6日</div>
             </div>
             <div class="article-content">
-              <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
-              <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec ullamcorper nulla non metus auctor fringilla.</p>
-              <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec ullamcorper nulla non metus auctor fringilla.</p>
-              <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec ullamcorper nulla non metus auctor fringilla.</p>
-              <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec ullamcorper nulla non metus auctor fringilla.</p>
-              <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec ullamcorper nulla non metus auctor fringilla.</p>
-              <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec ullamcorper nulla non metus auctor fringilla.</p>
-              <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec ullamcorper nulla non metus auctor fringilla.</p>
-              <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec ullamcorper nulla non metus auctor fringilla.</p>
-              <p>Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec ullamcorper nulla non metus auctor fringilla. Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Donec ullamcorper nulla non metus auctor fringilla.</p>
-
+              <h2>为什么用 WordPress 主题</h2>
+              <p>用 WordPress 主题可以快速定制个性化页面。</p>
+              <h3>什么是WordPress 主题</h3>
+              <p>WordPress 主题是用来按一定结构和样式展现站点内容一组文件。</p>
+              <h3>WordPress主题能带来什么好处</h3>
+              <p>能方便修改，能定制</p>
+              <h2>WordPress 主题结构</h2>
+              <ol>
+                <li><a href="http://tonyeen.me/archives/129">style.css 样式表文件</a></li>
+                <li><a href="http://tonyeen.me/archives/129">functions.php 模板函数文件</a></li>
+                <li><a href="http://tonyeen.me/archives/129">模板文件</a></li>
+              </ol>
+              <h2>创建 WordPress 主题</h2>
+              <ol>
+                <li><a href="http://tonyeen.me/archives/129">WordPress 主题文件层次</a></li>
+                <li><a href="http://tonyeen.me/archives/129">最简单的WordPress主题</a></li>
+              </ol>
+              <h2>TODO：</h2>
+              <ol start="3">
+                <li><a href="http://tonyeen.me/archives/129">WordPress 主题文件层次</a></li>
+                <li><a href="http://tonyeen.me/archives/129">最简单的WordPress主题</a></li>
+              </ol>
+              <h2>参考文档：</h2>
+              <ul>
+                <li><a href="http://codex.wordpress.org.cn/%E9%A6%96%E9%A1%B5"><em>WordPress 中文文档</em></a></li>
+                <li><a href="https://codex.wordpress.org/zh-cn:%E4%B8%BB%E9%A2%98"><em>WordPress 主题</em></a></li>
+              </ul>
 
             </div>
 
@@ -156,7 +172,7 @@
               </span>
             </div>
             <hr class="article-split"/>
-          </div>
+          </article>
         </div>
 
         <div class="box-common">
