--- a/app/blog_index.html
+++ b/app/blog_index.html
@@ -139,15 +139,15 @@
 
     <div class="row">
       <div class="col-sm-9">
-        <ul class="media-list article-list">
-          <li class="media">
-            <div class="media-left">
+        <div class="media-list article-list">
+          <article class="media">
+            <h4 class="media-heading"><a href="#">Media heading</a></h4>
+            <div class="media-left article-thumbnail">
               <a href="#">
                 <img class="media-object" width="200" src="http://static.bootcss.com/www/assets/img/codeguide.png" alt="">
               </a>
             </div>
             <div class="media-body">
-              <h4 class="media-heading"><a href="#">Media heading</a></h4>
               <div class="article-author"><span>来源：原创</span> 作者：Tony 发表时间：2014年12月6日</div>
               <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
               <div>
@@ -167,19 +167,19 @@
               </div>
             </div>
             <hr class="article-split"/>
-          </li>
-          <li class="media">
-            <div class="media-left">
+          </article>
+          <article class="media">
+            <h4 class="media-heading"><a href="#">Media heading</a></h4>
+            <div class="media-left article-thumbnail">
               <a href="#">
                 <img class="media-object" width="200" src="http://static.bootcss.com/www/assets/img/codeguide.png" alt="">
               </a>
             </div>
             <div class="media-body">
-              <h4 class="media-heading"><a href="#">Media heading</a></h4>
               <div class="article-author"><span>来源：原创</span> 作者：Tony 发表时间：2014年12月6日</div>
               <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
               <div>
-                <a href="#" class="btn btn-default">阅读全文</a>
+                <a href="/blog_article.html" class="btn btn-default">阅读全文</a>
               </div>
               <div class="article-action">
                 <span>
@@ -195,19 +195,19 @@
               </div>
             </div>
             <hr class="article-split"/>
-          </li>
-          <li class="media">
-            <div class="media-left">
+          </article>
+          <article class="media">
+            <h4 class="media-heading"><a href="#">Media heading</a></h4>
+            <div class="media-left article-thumbnail">
               <a href="#">
                 <img class="media-object" width="200" src="http://static.bootcss.com/www/assets/img/codeguide.png" alt="">
               </a>
             </div>
             <div class="media-body">
-              <h4 class="media-heading"><a href="#">Media heading</a></h4>
               <div class="article-author"><span>来源：原创</span> 作者：Tony 发表时间：2014年12月6日</div>
               <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
               <div>
-                <a href="#" class="btn btn-default">阅读全文</a>
+                <a href="/blog_article.html" class="btn btn-default">阅读全文</a>
               </div>
               <div class="article-action">
                 <span>
@@ -223,19 +223,19 @@
               </div>
             </div>
             <hr class="article-split"/>
-          </li>
-          <li class="media">
-            <div class="media-left">
+          </article>
+          <article class="media">
+            <h4 class="media-heading"><a href="#">Media heading</a></h4>
+            <div class="media-left article-thumbnail">
               <a href="#">
                 <img class="media-object" width="200" src="http://static.bootcss.com/www/assets/img/codeguide.png" alt="">
               </a>
             </div>
             <div class="media-body">
-              <h4 class="media-heading"><a href="#">Media heading</a></h4>
               <div class="article-author"><span>来源：原创</span> 作者：Tony 发表时间：2014年12月6日</div>
               <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
               <div>
-                <a href="#" class="btn btn-default">阅读全文</a>
+                <a href="/blog_article.html" class="btn btn-default">阅读全文</a>
               </div>
               <div class="article-action">
                 <span>
@@ -251,19 +251,19 @@
               </div>
             </div>
             <hr class="article-split"/>
-          </li>
-          <li class="media">
-            <div class="media-left">
+          </article>
+          <article class="media">
+            <h4 class="media-heading"><a href="#">Media heading</a></h4>
+            <div class="media-left article-thumbnail">
               <a href="#">
                 <img class="media-object" width="200" src="http://static.bootcss.com/www/assets/img/codeguide.png" alt="">
               </a>
             </div>
             <div class="media-body">
-              <h4 class="media-heading"><a href="#">Media heading</a></h4>
               <div class="article-author"><span>来源：原创</span> 作者：Tony 发表时间：2014年12月6日</div>
               <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
               <div>
-                <a href="#" class="btn btn-default">阅读全文</a>
+                <a href="/blog_article.html" class="btn btn-default">阅读全文</a>
               </div>
               <div class="article-action">
                 <span>
@@ -279,19 +279,19 @@
               </div>
             </div>
             <hr class="article-split"/>
-          </li>
-          <li class="media">
-            <div class="media-left">
+          </article>
+          <article class="media">
+            <h4 class="media-heading"><a href="#">Media heading</a></h4>
+            <div class="media-left article-thumbnail">
               <a href="#">
                 <img class="media-object" width="200" src="http://static.bootcss.com/www/assets/img/codeguide.png" alt="">
               </a>
             </div>
             <div class="media-body">
-              <h4 class="media-heading"><a href="#">Media heading</a></h4>
               <div class="article-author"><span>来源：原创</span> 作者：Tony 发表时间：2014年12月6日</div>
               <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
               <div>
-                <a href="#" class="btn btn-default">阅读全文</a>
+                <a href="/blog_article.html" class="btn btn-default">阅读全文</a>
               </div>
               <div class="article-action">
                 <span>
@@ -307,19 +307,19 @@
               </div>
             </div>
             <hr class="article-split"/>
-          </li>
-          <li class="media">
-            <div class="media-left">
+          </article>
+          <article class="media">
+            <h4 class="media-heading"><a href="#">Media heading</a></h4>
+            <div class="media-left article-thumbnail">
               <a href="#">
                 <img class="media-object" width="200" src="http://static.bootcss.com/www/assets/img/codeguide.png" alt="">
               </a>
             </div>
             <div class="media-body">
-              <h4 class="media-heading"><a href="#">Media heading</a></h4>
               <div class="article-author"><span>来源：原创</span> 作者：Tony 发表时间：2014年12月6日</div>
               <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
               <div>
-                <a href="#" class="btn btn-default">阅读全文</a>
+                <a href="/blog_article.html" class="btn btn-default">阅读全文</a>
               </div>
               <div class="article-action">
                 <span>
@@ -335,19 +335,19 @@
               </div>
             </div>
             <hr class="article-split"/>
-          </li>
-          <li class="media">
-            <div class="media-left">
+          </article>
+          <article class="media">
+            <h4 class="media-heading"><a href="#">Media heading</a></h4>
+            <div class="media-left article-thumbnail">
               <a href="#">
                 <img class="media-object" width="200" src="http://static.bootcss.com/www/assets/img/codeguide.png" alt="">
               </a>
             </div>
             <div class="media-body">
-              <h4 class="media-heading"><a href="#">Media heading</a></h4>
               <div class="article-author"><span>来源：原创</span> 作者：Tony 发表时间：2014年12月6日</div>
               <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
               <div>
-                <a href="#" class="btn btn-default">阅读全文</a>
+                <a href="/blog_article.html" class="btn btn-default">阅读全文</a>
               </div>
               <div class="article-action">
                 <span>
@@ -363,8 +363,36 @@
               </div>
             </div>
             <hr class="article-split"/>
-          </li>
-        </ul>
+          </article>
+          <article class="media">
+            <h4 class="media-heading"><a href="#">Media heading</a></h4>
+            <div class="media-left article-thumbnail">
+              <a href="#">
+                <img class="media-object" width="200" src="http://static.bootcss.com/www/assets/img/codeguide.png" alt="">
+              </a>
+            </div>
+            <div class="media-body">
+              <div class="article-author"><span>来源：原创</span> 作者：Tony 发表时间：2014年12月6日</div>
+              <p>Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin commodo. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.</p>
+              <div>
+                <a href="/blog_article.html" class="btn btn-default">阅读全文</a>
+              </div>
+              <div class="article-action">
+                <span>
+                  <a href="#"><span class="glyphicon glyphicon-folder-open"></span> 系列文章</a>
+                  <span class="glyphicon glyphicon-tags"></span> <a href="#">Bootstrap</a>, <a href="#">Jquery</a>, <a href="#">Javascript</a>, <a href="#">CSS</a>, <a href="#">HTML5</a>
+                </span>
+                <span class="pull-right">
+                  <a href="#"><span class="glyphicon glyphicon-heart"></span> 20</a>
+                  <a href="#"><span class="glyphicon glyphicon-eye-open"></span> 300</a>
+                  <a href="#"><span class="glyphicon glyphicon-comment"></span> 150</a>
+                  <a href="#"><span class="glyphicon glyphicon-new-window"></span> 56</a>
+                </span>
+              </div>
+            </div>
+            <hr class="article-split"/>
+          </article>
+        </div>
         <nav class="text-center">
           <ul class="pagination">
             <li class="disabled">
