--- a/app/blog_index.html
+++ b/app/blog_index.html
@@ -73,7 +73,7 @@
   </div>
 </div>
 <div>
-  <nav class="navbar navbar-default navbar-static-top">
+  <nav id="navbar-blog" class="navbar navbar-default navbar-static-top navbar-blog">
     <div class="container">
       <!-- Brand and toggle get grouped for better mobile display -->
       <div class="navbar-header">
